# demo-ci-123

./: CMakeLists.txt  CODEOWNERS  README.md  rerun.yml
.circleci/: config.yml  rerun.yml
.github/workflows/: main.yml  rerun.yml
src/: CMakeLists.txt  Formula.cpp  Formula.h  main.cpp
tst/: CMakeLists.txt  Formula-mock.h  Formula-test.cpp
